# sophyane

./: .env.example  .gitignore  AUTONOMY.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  COMMUNITY.md  COMPETITIVE_PARITY.md  CONTRIBUTING.md  DOWNLOAD.md  EXECUTION_EVIDENCE.md  GAP_ANALYSIS.md  HARNESS.md  INTEGRATIONS.md  LICENSE  MULTI_AGENT.md  PORTFOLIO_INDEX.md  README.md  RELEASE_NOTES_18.10.0.md  RELEASE_NOTES_18.11.0.md  RELEASE_NOTES_18.12.0.md  RELEASE_NOTES_18.13.0.md  RELEASE_NOTES_18.14.0.md  RELEASE_NOTES_18.8.0.md  RELEASE_NOTES_18.9.0.md  RELEASE_NOTES_V11.md  fix_sophyane_v8_dispatcher.sh  install-local.sh  install.ps1  install.sh  manifest.json  pyproject.toml  requirements-integrations-extended.txt  requirements-integrations.txt  setup.py  sophyane-10.0.0.py  sophyane-10.0.1.py  sophyane-10.0.2.py  sophyane-10.0.3.py  sophyane-10.0.4.py  (+11 more)
.github/workflows/: autonomy-acceptance.yml  ci.yml  comprehensive-benchmark.yml  execution-evidence.yml  harness-acceptance.yml  head-to-head.yml  integration-compatibility.yml  release.yml  sophyane-browser-release.yml  sophyane-daily-improve.yml  tests.yml  v13-multiagent.yml
apps/android/: README.md
benchmark-results/competitive/: REPORT.md  matrix.json
benchmark-results/execution-evidence/: REPORT.md  results.json
benchmark-results/harness/: REPORT.md  results.json
benchmark-results/lang-ecosystem-full/: REPORT.md  results.json
benchmark-results/multiagent-v13/: REPORT.md  results.json
benchmark-results/tough100/: REPORT_expert.md  results_expert.json
benchmarks/: aggregate_results.py  competitive_matrix.py  comprehensive.py  execution_evidence_acceptance.py  full_lang_ecosystem_exam.py  harness_acceptance.py  head_to_head.py  integration_acceptance.py  langgraph_inventory_agent.py  multiagent_acceptance.py  service_acceptance.py  tough100_exam.py  tough100_questions.json
browser/: README.md  install.ps1  install.sh  package.sh
browser/home/: app.js  harness.css  harness.js  index.html  manifest.webmanifest  styles.css
defaults/: llm.json  user-config.example.json
docs/: AGENT_CAPABILITIES.md  AI_KERNEL.md  APPLIANCE_BOOT.md  BROWSER_AND_SELF_IMPROVE.md  CLOUD_PORTAL.md  COI.md  COMPETITIVE_EXAM.md  CONTINUAL_FEDERATED.md  EVALUATION.md  FULL_CAPABILITY_EXAM.md  HARDWARE_SOFTWARE_API.md  MCP.md  MESH.md  PORTABILITY.md  PROMPT_GUIDE.md  RECURSIVE_KERNEL_IMPROVEMENT.md  SLI.md  SOPHYANE_20.md  V11.md  V14_DOER.md
docs/releases/: 18.15.0.md  18.16.0.md  19.0.0.md  19.1.0.md
improvements/: CATALOG.md  epoch-2026-07-15.json  epoch-2026-07-18.json
native/: sophyane_kernel.cpp
scripts/: sophyane-chess-duel
sdk/cpp/: CMakeLists.txt
sdk/cpp/continual/: CMakeLists.txt
sdk/cpp/continual/include/: sophyane_train.hpp
sdk/cpp/continual/src/: train_core.cpp
sdk/cpp/examples/: hello_sophyane.cpp
sdk/cpp/include/: sophyane_client.hpp
sdk/js/: example.mjs  package.json  sophyane-client.js
sdk/python/: example_hardware_api.py
src/sophyane/: __init__.py  __main__.py  adaptive_execution.py  agent.py  agent_runtime.py  appliance.py  artifact_extractor.py  audit_cli.py  autonomous_builder.py  autonomy.py  benchmark_cli.py  browser_failure_gate.py  browser_partial_recovery.py  browser_runtime_v2.py  budget.py  capabilities.py  capability_gap.py  capability_manager.py  checkpoint.py  cli_entry.py  coding_runtime.py  coi.py  coi_cli.py  config.py  cursor_tab.py  daemon_runtime.py  decision_visibility.py  deep_agent_runtime.py  diagnostics.py  doer.py  edge_agent.py  editable_canvas.py  engineering_program.py  execution_evidence.py  execution_kernel.py  execution_runtime.py  failure_memory.py  feature_audit.py  game_validation.py  generation_contract.py  (+102 more)
src/sophyane/browser/: __init__.py  launcher.py
src/sophyane/browser/home/: app.js  harness.html  index.html  manifest.webmanifest  styles.css
src/sophyane/cloud/: __init__.py  auto_messaging_setup.py  crypto_billing.py  email_otp.py  messaging.py  namecheap.py  payments_rails.py  portal.py  pricing.py  product_knowledge.py  store.py  stripe_billing.py  telegram_bot.py
src/sophyane/competitive/: __init__.py  agent_session_api.py
src/sophyane/continual/: __init__.py  engine.py
src/sophyane/expert/: __init__.py  answer.py  exam.py  knowledge.py
src/sophyane/kernel/: __init__.py  app_factory.py  bus.py  core.py  erp.py
src/sophyane/mesh/: __init__.py  core.py  discovery.py  federation.py  install_peer.py
src/sophyane/providers/: __init__.py  anthropic.py  base.py  deepseek.py  fallback.py  gemini.py  groq.py  http.py  local_gguf.py  ollama.py  openai.py  openai_compatible.py  openrouter.py  xai.py
src/sophyane/self_improve/: __init__.py  ledger.py
tests/: test_18_10_0_quality_escalation.py  test_18_11_0_startup_policy.py  test_18_12_0_rescue_ownership.py  test_18_13_0_artifact_extractor.py  test_18_14_0_deep_agent_runtime.py  test_18_9_0_validated_learning.py  test_agent_autonomous_routing.py  test_agent_conversation_context.py  test_agent_memory_recall.py  test_ai_kernel.py  test_appliance_and_audit.py  test_autonomous_builder.py  test_autonomy.py  test_autonomy_contract.py  test_best_html_repair.py  test_browser_failure_gate.py  test_browser_partial_recovery.py  test_browser_recursive_behavior.py  test_browser_web_improve.py  test_capability_manager.py  test_ci_contract.py  test_cli_one_shot.py  test_coding_runtime_v16.py  test_continual_train.py  test_doer.py  test_editable_capability_routing.py  test_embedded_html_validator.py  test_execution_evidence.py  test_failure_memory.py  test_fallback_and_daemon.py  test_future_agent.py  test_gemini_provider_auth.py  test_goal_execution.py  test_goal_runtime.py  test_goal_scheduler.py  test_graph_runtime.py  test_hardware_api.py  test_harness.py  test_html_repair_policy.py  test_improvement_ledger_export_policy.py  (+39 more)
tools/: chess_duel.py  sophyane_guarded_improve.py
website/: Caddyfile.sophyane-cloud  browser-home  browser.html  docs.html  get-api.html  index.html  pricing.html  start.html
website/css/: site.css
website/download/: README.txt
website/js/: site.js
