[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophyane"
version = "18.7.3"
description = "Repository-aware autonomous coding agent with semantic indexing, precise patches, batched execution and deterministic verification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Badar Uzaman"}]
keywords = ["ai", "coding-agent", "repository", "semantic-index", "patch", "self-repair", "multi-agent", "llm", "autonomous", "workflow", "gemini", "openai", "ollama", "cli", "local-ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Android",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/badrpk/sophyane"
Repository = "https://github.com/badrpk/sophyane"
Issues = "https://github.com/badrpk/sophyane/issues"

[project.scripts]
sophyane = "sophyane.cli_entry:main"
sophyane-web = "sophyane.web:main"
sophyane-doctor = "sophyane.diagnostics:main"
sophyane-browser = "sophyane.browser.launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sophyane = ["browser/home/*", "expert/data/*"]

# Ship exam questions next to install tree via data files if present
