[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophyane"
version = "20.3.1"
description = "Local-first AI software engineering operating system with recursive SLI provider and intent orchestration, COI, MCP, repository intelligence, coded sandboxes, audits, and end-to-end product benchmarks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Badar Uzaman"}]
keywords = ["ai", "coding-agent", "repository", "semantic-index", "self-repair", "multi-agent", "llm", "autonomous", "local-ai", "validated-execution", "local-first", "sandbox", "provider-dispatch", "subagents", "evaluation", "tracing", "compaction", "coi", "mcp", "orchestration", "release-gate", "audit", "benchmark", "sli", "lstm", "intent-routing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Android",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/badrpk/sophyane"
Repository = "https://github.com/badrpk/sophyane"
Issues = "https://github.com/badrpk/sophyane/issues"

[project.scripts]
sophyane = "sophyane.cli_entry:main"
sophyane-web = "sophyane.web:main"
sophyane-doctor = "sophyane.diagnostics:main"
sophyane-browser = "sophyane.browser.launcher:main"
sophyane-sli = "sophyane.sli_cli:main"
sophyane-sli-train = "sophyane.sli_training_loop:main"
sophyane-sli-migrate = "sophyane.sli_schema:main"
sophyane-vela = "sophyane.vela:main"
sophyane-platform = "sophyane.platform_cli:main"
sophyane-coi = "sophyane.coi_cli:main"
sophyane-release = "sophyane.release_cli:main"
sophyane-audit = "sophyane.audit_cli:main"
sophyane-benchmark = "sophyane.benchmark_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sophyane = ["browser/home/*", "expert/data/*"]
