cmake_minimum_required(VERSION 3.14)
project(sophyane_train_core LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(sophyane-train-core src/train_core.cpp)
target_include_directories(sophyane-train-core PRIVATE include)
if(NOT MSVC)
  target_compile_options(sophyane-train-core PRIVATE -O2 -Wall -Wextra)
endif()
install(TARGETS sophyane-train-core RUNTIME DESTINATION bin)
